--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,17 +1,18 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Brand</a>
+  <%= link_to "Articles", root_path, class: 'navbar-brand'%>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li> <%= link_to "Sign Up", new_user_registration_path %></li>
-      <li> <%= link_to "Sign In", new_user_session_path %></li>
-      <li> <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+      <%= link_to  "Contact", pages_contact_path %>
+      <%= link_to "About", pages_about_path %>
+      <%= link_to "Sign Up", new_user_registration_path %>
+      <%= link_to "Sign In", new_user_session_path %>
+      <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
       
       
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+      
       </li>
     </ul>
   </div>
