--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>Article</title>
   <%= stylesheet_link_tag   'application', media: 'all', 'data-turbolink-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track'=> true %>
   <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render 'layouts/nav' %>
-
+  <%= bootstrap_flash %>
   <div class='container'>
     <%= yield %>
   </div>
