--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -5,15 +5,19 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
+      
       <%= link_to  "Contact", pages_contact_path %>
       <%= link_to "About", pages_about_path %>
+      <% if !current_user %>
       <%= link_to "Sign Up", new_user_registration_path %>
       <%= link_to "Sign In", new_user_session_path %>
+      <% else %>
       <%= button_to 'Sign Out', destroy_user_session_path, method: :delete %>
-      
+      <%= link_to  "Edit My Profile", edit_user_registration_path %>
       
       
       </li>
     </ul>
+    <% end %>
   </div>
 </nav>
