--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,15 @@
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
+    <%= f.label :username %><br />
+    <%= f.text_field :username, autofocus: true %>
+    <br/>
+    <%= f.label :firstname %><br />
+    <%= f.text_field :firstname, autofocus: true %>
+    <br/>
+    <%= f.label :lastname %><br />
+    <%= f.text_field :lastname, autofocus: true %>
+    <br/>
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
