--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,6 +8,8 @@
       
       <%= link_to  "Contact", pages_contact_path %>
       <%= link_to "About", pages_about_path %>
+      <%= link_to  "Create an Article", new_article_path %>
+
       <% if !current_user %>
       <%= link_to "Sign Up", new_user_registration_path %>
       <%= link_to "Sign In", new_user_session_path %>
