--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,32 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Articles</h1>
-
-<div id="articles">
-  <% @articles.each do |article| %>
-    <%= render article %>
-    <p>
-      <%= link_to "Show this article", article %>
-    </p>
-  <% end %>
+<div class="row">
+<!-- Blog Sidebar Widgets Column -->
+<div class="col-md-4">
+ <div class="well">
+ <h4>Recent articles</h4>
+ <% @last5.each do |a| %>
+ Created by: <%= a.user %><br />
+ <strong><%= link_to a.title, a %></strong>
+ <p><%= truncate(a.body) %></p>
+ <% end %>
+ </div>
 </div>
+ <!-- Blog article Content Column -->
+ <div class="col-lg-8">
+<% @articles.each do |article| %>
+ <!-- Blog article -->
+ <!-- Title -->
+ <h4 style="font-size: 45.5px;"><%= link_to article.title, article %></h4>
+ <!-- Date/Time -->
+ <p><span class="glyphicon glyphicon-time"></span>
+ </p>
 
-<%= link_to "New article", new_article_path %>
+ <!-- Author -->
+ <p>
+ Article By:<strong> <%= article.user %></strong>
+ </p>
+ <hr>
+ <!-- articleed Comments -->
+ <!-- Comment -->
+<% end %>
+<%= link_to "New article", new_article_path, class: "btn btn-default btn-xs" %>
+ </div>
