--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
 <p style="color: green"><%= notice %></p>
+<%= render 'comments/form' %>
 
 <%= render @article %>
 
@@ -8,3 +9,56 @@
 
   <%= button_to "Destroy this article", @article, method: :delete %>
 </div>
+<div class="row">
+ <!-- Blog Post Content Column -->
+ <div class="col-lg-8">
+ <!-- Blog Post -->
+ <!-- Title -->
+ <h1 style="font-size: 62.5px;">
+ <%= @article.title %>
+ </h1>
+ <!-- Author -->
+ <p class="lead">
+ <%= @article.user %>
+ </p>
+ <hr>
+ <!-- Date/Time -->
+ <p><span class="glyphicon glyphicon-time"></span> Was Posted:
+
+ <hr>
+ <!-- Preview Image -->
+
+ <hr>
+ <!-- Post Content -->
+<%= @article.body %>
+ <hr>
+ <!-- Blog Comments -->
+ <%= render @article.comments %>
+ <!-- Comments Form -->
+
+ <%= render 'comments/form' %>
+ <div class="well">
+
+
+
+<h4>blah blah</h4>
+ </div>
+ <hr>
+ <!-- Posted Comments -->
+ <!-- Comment -->
+ </div>
+ <!-- Blog Sidebar Widgets Column -->
+ <div class="col-md-4">
+ <!-- Blog Search Well -->
+
+ <!-- Blog Categories Well -->
+
+ <!-- Side Widget Well -->
+ <div class="well">
+ <h4>Recent Posts</h4>
+
+ </div>
+ </div>
+</div>
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Back', articles_path %>
